<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".auth.RecoverPasswordFragment">

  <Button
    android:id="@+id/recover_recover"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:text="@string/recover_page_recover"
    android:textColor="@color/colorTextLight"
    android:textSize="20sp"
    app:layout_constraintEnd_toStartOf="@+id/recover_guideline_left"
    app:layout_constraintStart_toStartOf="@+id/recover_guideline_right"
    app:layout_constraintTop_toBottomOf="@+id/recover_email_holder" />

  <Button
    android:id="@+id/button_recoverBack"
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:layout_marginTop="32dp"

    android:background="@drawable/arrow_back_icon"
    android:onClick="customBack"
    app:layout_constraintStart_toStartOf="@+id/recover_guideline_right"
    app:layout_constraintTop_toTopOf="parent" />
  <TextView
    android:id="@+id/recover_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/recover_page_recover"
    android:textColor="@android:color/black"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <TextView
    android:id="@+id/forgot_subheader"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:layout_marginTop="24dp"
    android:text="@string/recover_page_recover_message"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintEnd_toStartOf="@+id/recover_guideline_left"
    app:layout_constraintStart_toStartOf="@+id/recover_guideline_right"
    app:layout_constraintTop_toBottomOf="@+id/recover_header" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/recover_guideline_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="50dp" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/recover_guideline_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="50dp" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/recover_guideline_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="212dp" />


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/recover_email_holder"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    app:hintTextColor="@color/colorPrimary"
    app:layout_constraintEnd_toStartOf="@+id/recover_guideline_left"
    app:layout_constraintStart_toStartOf="@+id/recover_guideline_right"
    app:layout_constraintTop_toTopOf="@+id/recover_guideline_up">
    <EditText
      android:id="@+id/recover_email"
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:ems="10"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintVertical_bias="0.0" />
  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>